fix ad z-index issue

--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -96,6 +96,7 @@ $headerBorder = 3px solid #000
   position: fixed
   top: 0
   width: 100%
+  z-index: 10
 
   ul
     position: absolute
@@ -181,12 +182,12 @@ $headerBorder = 3px solid #000
   position: fixed
   top: $headerHeight
   width: 100%
+  z-index: 10
 
 #browse
   height: 0
   padding: 0
   overflow: hidden
-  z-index: 10
 
   transition-property: padding, height
   transition-duration: .5s
